crates/fixtures/tests/snapshots/hostile__note_on_last_line.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      56
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    },
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "14@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 3
          },
          "preview": "aa",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 10424,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 3
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 10424
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 3,
            "end": 6
          },
          "preview": "bb",
          "rect": {
            "origin": {
              "x": 0,
              "y": 12288
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 22021,
          "width": 11714,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 3,
                "end": 6
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 11714
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 6,
            "end": 9
          },
          "preview": "cc",
          "rect": {
            "origin": {
              "x": 0,
              "y": 24576
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 34309,
          "width": 9994,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 6,
                "end": 9
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 9994
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 9,
            "end": 12
          },
          "preview": "dd",
          "rect": {
            "origin": {
              "x": 0,
              "y": 36864
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 46597,
          "width": 11612,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 9,
                "end": 12
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 11612
            }
          ]
        },
        {
          "frame": 0,
          "text": {
            "start": 12,
            "end": 14
          },
          "preview": "ee",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 58885,
          "width": 10444,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 12,
                "end": 14
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 10444
            }
          ]
        }
      ]
    },
    {
      "node": "32@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 3,
          "text": {
            "start": 0,
            "end": 14
          },
          "preview": "Last-line note",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 58885,
          "width": 62473,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 14
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 62473
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "55@1",
      "schema": "reprise.note",
      "owner": "32@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "anchor",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "14@1",
              "bytes": {
                "start": 13,
                "end": 14
              }
            }
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "info",
      "code": "layout.note-continued",
      "subject": {
        "kind": "relation",
        "id": "55@1"
      },
      "message": "note continues or starts on a later page",
      "bytes": null
    }
  ]
}
