crates/fixtures/tests/snapshots/hostile__note_taller_than_page.snap
---
source: crates/fixtures/tests/hostile.rs
expression: snapshot.to_json()
---
{
  "revision": [
    [
      1,
      87
    ]
  ],
  "adapter": {
    "name": "harfrust",
    "version": "0.13.3",
    "platform_independent": true
  },
  "composer": "greedy",
  "medium": {
    "width": 430080,
    "height": 307200
  },
  "settings": {
    "max_pages": 1000,
    "paragraph_spacing": 8192,
    "annotation_spacing": 4096
  },
  "template": {
    "name": "regions",
    "source": "document"
  },
  "pages": [
    {
      "width": 102400,
      "height": 61440
    },
    {
      "width": 102400,
      "height": 61440
    },
    {
      "width": 102400,
      "height": 61440
    }
  ],
  "frames": [
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 0,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 1,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "body",
      "role": {
        "flow": "main"
      },
      "page": 2,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    },
    {
      "name": "notes",
      "role": "notes",
      "page": 2,
      "to_page": {
        "xx": 65536,
        "yx": 0,
        "xy": 0,
        "yy": 65536,
        "tx": 0,
        "ty": 0
      },
      "rect": {
        "origin": {
          "x": 0,
          "y": 0
        },
        "width": 102400,
        "height": 61440
      }
    }
  ],
  "blocks": [
    {
      "node": "14@1",
      "kind": "paragraph",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style body",
          "size": "style body"
        }
      },
      "lines": [
        {
          "frame": 0,
          "text": {
            "start": 0,
            "end": 22
          },
          "preview": "Anchor and later body",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 101846,
          "explanation": {
            "reason": "opportunity",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 22
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 104232
            }
          ]
        },
        {
          "frame": 4,
          "text": {
            "start": 22,
            "end": 27
          },
          "preview": "text.",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 20336,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 22,
                "end": 27
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 20336
            }
          ]
        }
      ]
    },
    {
      "node": "45@1",
      "kind": "annotation",
      "style": {
        "family": "Source Serif Pro",
        "size": 10240,
        "line_height": 12288,
        "explain": {
          "family": "default",
          "line-height": "style note",
          "size": "style note"
        }
      },
      "lines": [
        {
          "frame": 1,
          "text": {
            "start": 0,
            "end": 3
          },
          "preview": "aa",
          "rect": {
            "origin": {
              "x": 0,
              "y": 12288
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 22021,
          "width": 10424,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 0,
                "end": 3
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 10424
            }
          ]
        },
        {
          "frame": 1,
          "text": {
            "start": 3,
            "end": 6
          },
          "preview": "bb",
          "rect": {
            "origin": {
              "x": 0,
              "y": 24576
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 34309,
          "width": 11714,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 3,
                "end": 6
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 11714
            }
          ]
        },
        {
          "frame": 1,
          "text": {
            "start": 6,
            "end": 9
          },
          "preview": "cc",
          "rect": {
            "origin": {
              "x": 0,
              "y": 36864
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 46597,
          "width": 9994,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 6,
                "end": 9
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 9994
            }
          ]
        },
        {
          "frame": 1,
          "text": {
            "start": 9,
            "end": 12
          },
          "preview": "dd",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 58885,
          "width": 11612,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 9,
                "end": 12
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 11612
            }
          ]
        },
        {
          "frame": 3,
          "text": {
            "start": 12,
            "end": 15
          },
          "preview": "ee",
          "rect": {
            "origin": {
              "x": 0,
              "y": 0
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 9733,
          "width": 10444,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 12,
                "end": 15
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 10444
            }
          ]
        },
        {
          "frame": 3,
          "text": {
            "start": 15,
            "end": 18
          },
          "preview": "ff",
          "rect": {
            "origin": {
              "x": 0,
              "y": 12288
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 22021,
          "width": 6738,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 15,
                "end": 18
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 6738
            }
          ]
        },
        {
          "frame": 3,
          "text": {
            "start": 18,
            "end": 21
          },
          "preview": "gg",
          "rect": {
            "origin": {
              "x": 0,
              "y": 24576
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 34309,
          "width": 10506,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 18,
                "end": 21
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 10506
            }
          ]
        },
        {
          "frame": 3,
          "text": {
            "start": 21,
            "end": 24
          },
          "preview": "hh",
          "rect": {
            "origin": {
              "x": 0,
              "y": 36864
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 46597,
          "width": 12308,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 21,
                "end": 24
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 12308
            }
          ]
        },
        {
          "frame": 3,
          "text": {
            "start": 24,
            "end": 27
          },
          "preview": "ii",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 58885,
          "width": 6104,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 24,
                "end": 27
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 6104
            }
          ]
        },
        {
          "frame": 5,
          "text": {
            "start": 27,
            "end": 30
          },
          "preview": "jj",
          "rect": {
            "origin": {
              "x": 0,
              "y": 36864
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 46597,
          "width": 5672,
          "explanation": {
            "reason": "forced",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 27,
                "end": 30
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 5672
            }
          ]
        },
        {
          "frame": 5,
          "text": {
            "start": 30,
            "end": 32
          },
          "preview": "kk",
          "rect": {
            "origin": {
              "x": 0,
              "y": 49152
            },
            "width": 102400,
            "height": 12288
          },
          "baseline": 58885,
          "width": 11202,
          "explanation": {
            "reason": "end",
            "score": null,
            "adjustment": {
              "word_spacing": 0,
              "letter_spacing": 0
            },
            "reshaped": false
          },
          "runs": [
            {
              "range": {
                "start": 30,
                "end": 32
              },
              "face": {
                "family": "Source Serif Pro",
                "hash": "199c8adc83479480d9aa5d942afe8f52"
              },
              "size": 10240,
              "level": 0,
              "x": 0,
              "width": 11202
            }
          ]
        }
      ]
    }
  ],
  "relations": [
    {
      "id": "86@1",
      "schema": "reprise.note",
      "owner": "45@1",
      "status": "valid",
      "applied": true,
      "targets": [
        {
          "role": "anchor",
          "status": "valid",
          "resolved": {
            "range": {
              "node": "14@1",
              "bytes": {
                "start": 1,
                "end": 2
              }
            }
          }
        }
      ]
    }
  ],
  "diagnostics": [
    {
      "severity": "info",
      "code": "layout.note-continued",
      "subject": {
        "kind": "relation",
        "id": "86@1"
      },
      "message": "note continues or starts on a later page",
      "bytes": null
    }
  ]
}
